--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,8 @@ interface Props {
 }
 
 const { title = 'Disclosure of Companies' } = Astro.props;
+// Ensure base is defined (Astro.base can be undefined during dev)
+const base = Astro.base ?? '/';
 ---
 
 <!doctype html>
@@ -14,7 +16,7 @@ const { title = 'Disclosure of Companies' } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-	<link rel="icon" type="image/svg+xml" href={`${Astro.base}favicon.svg`} />
+	<link rel="icon" type="image/svg+xml" href={`${base}favicon.svg`} />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<script is:inline>
